Fix unescaped newline in string literal

--- a/public/index.html
+++ b/public/index.html
@@ -1095,10 +1095,10 @@
                 }
 
                 if (pastes.length === 0) {
-                    cardsContainer.innerHTML = '<li
+                    cardsContainer.innerHTML = `<li
                     style = "display:flex; justify-content:center; align-items:center; background:none; border:none; box-shadow:none;" >
                         <h3>No Pastes Found</h3>
-        </li > ';
+        </li > `;
                     return;
                 }
 
